[package]
name = "kled"
version = "0.0.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Reactive Extensions for Rust"
repository = "https://github.com/alexanderlinne/kled"
edition = "2018"

[dependencies]
async-trait = "0.1.48"
chronobreak = { git = "https://github.com/alexanderlinne/chronobreak" }
derive-new = "0.5"
futures-timer = "3.0"
kled_derive = { path = "../kled_derive" }
num_cpus = "1.13"
parking_lot = "0.12"
thread_local = "1.1.3"

[dependencies.async-std]
version = "1.8"
features = ["attributes", "unstable"]

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]

[dev-dependencies]
chronobreak_futures = { git = "https://github.com/alexanderlinne/chronobreak" }
chronobreak_futures_timer = { git = "https://github.com/alexanderlinne/chronobreak" }
chronobreak_parking_lot = { git = "https://github.com/alexanderlinne/chronobreak" }
chronobreak_std = { git = "https://github.com/alexanderlinne/chronobreak", features = ["extended-apis"] }
