[package]
name = "kled_derive"
version = "0.0.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for the kled crate"
repository = "https://github.com/alexanderlinne/kled"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = "2.0"
quote = "1.0"

[dev-dependencies]
kled = { path = "../kled" }
trybuild = "1.0"
impls = "1.0"

[[test]]
name = "ui"
path = "tests/ui/mod.rs"
harness = false
