[package]
name = "rxui_rx"
version = "0.1.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
derive-new = "0.5"
lazy_static = "1.4"
num_cpus = "1.13"
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
rxui_mock = { path = "../rxui_mock" }
rxui_rx_derive = { path = "../rxui_rx_derive" }
